--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,14 @@
     <body>
         {% include 'header.html' %}
         {% block content %}{% endblock  %}
-        {% include 'footer.html'%}
+        <div>
+           <br><br><br>
+        </div>
+        <footer class="py-3 bg-dark fixed-bottom">
+           <div class="container">
+               <p class="m-0 text-center text-white">Copyright &copy; 2023 你想不到的點名系統 </p>
+           </div>
+        </footer>
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <!-- JavaScript Bundle with Popper -->
