--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,7 +5,7 @@
 </div>
 <footer class="py-3 bg-dark fixed-bottom">
    <div class="container">
-       <p class="m-0 text-center text-white">Copyright &copy; Django 2023</p>
+       <p class="m-0 text-center text-white">Copyright &copy; 2023 你想不到的點名系統 </p>
    </div>
 </footer>
 
