--- a/templates/record.html
+++ b/templates/record.html
@@ -9,7 +9,7 @@
         cursor: pointer;*/
     }
 </style>
-<h2>學生缺勤記錄</h2>
+<h2>學生缺曠記錄</h2>
 {% if position == 'teacher' %}
     <form method="get" action="">
         <label for="week_number">選擇週數：</label>
