--- a/templates/course.html
+++ b/templates/course.html
@@ -1,8 +1,14 @@
 {% extends 'base.html' %}
 {% block head %}
-{% endblock head %}
-{% block content %}
     <style>
+        html{
+           height: 90%; 
+        }
+        body, html {
+          /*height: 100%;*/
+          margin: 0;
+          /*overflow-x: hidden;*/
+        }
         .table-container {
             display: flex;
             flex-direction: column;
@@ -11,10 +17,19 @@
         }
 
         .table {
-            width: 100%;
             max-width: 100%;
+            overflow: auto;
         }
+        .container {
+            height: 100%;
+            width: 100%;
+            overflow-y: scroll;
+            overflow-x: hidden;
+        }
+
     </style>
+{% endblock head %}
+{% block content %}
     {% if message == 'alert' %}
         <div class="alert alert-warning alert-dismissible fade show" role="alert">
             <strong>已選位!</strong> 請刪除選位後，再進行選擇
@@ -31,16 +46,19 @@
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     {% elif message == '今天沒有這堂課' %}
-    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        <strong>今天沒有這堂課!</strong> 請確認課表
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <strong>今天沒有這堂課!</strong> 請確認課表
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
     {% endif %}
     <div class="container border">
-        <div class="row">
-            <div class="col-md-12">
-                <p>課程名稱：{{subject}}</p>
-                <p>座位表：{{classroom}}</p>
+        <div class="col-sm-12">
+            <div class="col-sm-12">
+              <div class="container mt-4">
+                <!-- 使用 Bootstrap 样式类 -->
+                <p class="fs-5">課程名稱：{{subject}}</p>
+                <p class="fs-5 text-muted">座位表 ：{{classroom}}</p>
+              </div>
                 <div class="clearfix">
                     <div class="col-12">
                         <form action="{% url 'course' subject=subject %}" class="mb-5" method="post">
@@ -50,58 +68,25 @@
                                 <label for="selected_student" class="form-label">選擇學生：</label>
                                 <select class="form-select" name="selected_student" id="selected_student">
                                     {% for student in students %}
-                                        <option value="{{ student }}">{{ student }}</option>
+                                        <option value="{{ student }}">{{ student.0 }} {{ student.1 }}</option>
                                     {% endfor %}
                                 </select>
                             {% endif %}
                             <!-- 座位列表 -->
-                            <div class="row g-0">
-                                <div class="table-container mt-3 d-sm-block">
-                                    <!-- ... 03A0701 ... -->
-                                    {% if classroom == '03C0701' %}
-                                        <div class="table-container mt-3 d-sm-block">
-                                            <table class="table">
-                                                {% for key, value in seat.items %}
-                                                    {% if key != '0' %} {# 忽略 key 为 0 的座位 #}
-                                                        {% if forloop.counter0|divisibleby:10 and not forloop.first %}
-                                                            </tr><tr>
-                                                        {% endif %}
-                                                        <td>
-                                                            <div class="button-container">
-                                                                {% if value == 0 %}
-                                                                    <input value="{{ key }}" type="radio" class="btn-check"
-                                                                        name="number" id="success-outlined-{{ key }}"
-                                                                        autocomplete="off">
-                                                                    <label style="width: 77px;" class="btn btn-outline-success m-1"
-                                                                        for="success-outlined-{{ key }}">{{ key }}</label>
-                                                                {% elif value != 0 %}
-                                                                    <input value="{{ key }}" type="radio" class="btn-check"
-                                                                        name="number" id="success-outlined-{{ key }}"
-                                                                        autocomplete="off" disabled>
-                                                                    <label style="width: 77px;" class="btn btn-success m-1"
-                                                                        for="success-outlined-{{ key }}">{{ value }}</label>
-                                                                {% endif %}
-                                                            </div>
-                                                        </td>
-                                                        {% if forloop.counter in seats_per_column %}
-                                                            </tr><tr>
-                                                        {% endif %}
-                                                    {% endif %}
-                                                {% endfor %}
-                                            </table>
-                                        </div>
-                                    <!-- ... '03C0602' or '03C0603' ... -->
-                                    {% elif message == '03C0602' or '03C0603' %}
-                                        <table class="table">
-                                            <tr>
-                                                <td>
-                                                    <div class="button-container">
-                                                        {% for key, value in seat.items %}
-                                                            {% if key != '0' %} {# 忽略 key 为 0 的座位 #}
-                                                                {% if forloop.counter0|divisibleby:14 and not forloop.first %}
-                                                                    </div></td><td><div class="button-container">
-                                                                {% endif %}
-                                                                <div class="button">
+                            <div class="container">
+                                <div class="col-12">
+                                    <div class="table mt-3">
+                                        <!-- ... 03A0701 ... -->
+                                        {% if classroom == '03C0701' %}
+                                            <div>
+                                                <table class="table">
+                                                    {% for key, value in seat.items %}
+                                                        {% if key != '0' %} {# 忽略 key 为 0 的座位 #}
+                                                            {% if forloop.counter0|divisibleby:10 and not forloop.first %}
+                                                                </tr><tr>
+                                                            {% endif %}
+                                                            <td>
+                                                                <div class="col-md-12 ">
                                                                     {% if value == 0 %}
                                                                         <input value="{{ key }}" type="radio" class="btn-check"
                                                                             name="number" id="success-outlined-{{ key }}"
@@ -116,28 +101,63 @@
                                                                             for="success-outlined-{{ key }}">{{ value }}</label>
                                                                     {% endif %}
                                                                 </div>
+                                                            </td>
+                                                            {% if forloop.counter in seats_per_column %}
+                                                                </tr><tr>
                                                             {% endif %}
-                                                        {% endfor %}
-                                                    </div>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    {% endif %}
-                                </div>
-                                <div class="mt-3">
-                                    {% if message == 'None' or  position == 'teacher' %}
-                                        {% if message == '今天沒有這堂課' %}
-                                            <input class="form-control btn btn-lg btn-primary" type="submit" value="確定選位" disabled>
-                                        {% else %}
-                                            <input class="form-control btn btn-lg btn-primary" type="submit" value="確定選位">
+                                                        {% endif %}
+                                                    {% endfor %}
+                                                </table>
+                                            </div>
+                                        <!-- ... '03C0602' or '03C0603' ... -->
+                                        {% elif message == '03C0602' or '03C0603' %}
+                                            <table class="table">
+                                                <tr>
+                                                    <td>
+                                                        <div class="button-container">
+                                                            {% for key, value in seat.items %}
+                                                                {% if key != '0' %} {# 忽略 key 为 0 的座位 #}
+                                                                    {% if forloop.counter0|divisibleby:14 and not forloop.first %}
+                                                                        </div></td><td><div class="button-container">
+                                                                    {% endif %}
+                                                                    <div class="button">
+                                                                        {% if value == 0 %}
+                                                                            <input value="{{ key }}" type="radio" class="btn-check"
+                                                                                name="number" id="success-outlined-{{ key }}"
+                                                                                autocomplete="off">
+                                                                            <label style="width: 77px;" class="btn btn-outline-success m-1"
+                                                                                for="success-outlined-{{ key }}">{{ key }}</label>
+                                                                        {% elif value != 0 %}
+                                                                            <input value="{{ key }}" type="radio" class="btn-check"
+                                                                                name="number" id="success-outlined-{{ key }}"
+                                                                                autocomplete="off" disabled>
+                                                                            <label style="width: 77px;" class="btn btn-success m-1"
+                                                                                for="success-outlined-{{ key }}">{{ value }}</label>
+                                                                        {% endif %}
+                                                                    </div>
+                                                                {% endif %}
+                                                            {% endfor %}
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                            </table>
                                         {% endif %}
-                                    {% else %}
-                                        {% if message == 'alert' or message == 'tt' %}
-                                            <input class="form-control btn btn-lg btn-primary" type="submit" value="確定選位" >
+                                    </div>
+                                    <div class="mt-3">
+                                        {% if message == 'None' or  position == 'teacher' %}
+                                            {% if message == '今天沒有這堂課' %}
+                                                <input class="form-control btn btn-lg btn-primary" type="submit" value="確定選位" disabled>
+                                            {% else %}
+                                                <input class="form-control btn btn-lg btn-primary" type="submit" value="確定選位">
+                                            {% endif %}
                                         {% else %}
-                                            <input class="form-control btn btn-lg btn-primary" type="submit" value="確定選位" disabled>
+                                            {% if message == 'alert' or message == 'tt' %}
+                                                <input class="form-control btn btn-lg btn-primary" type="submit" value="確定選位" >
+                                            {% else %}
+                                                <input class="form-control btn btn-lg btn-primary" type="submit" value="確定選位" disabled>
+                                            {% endif %}
                                         {% endif %}
-                                    {% endif %}
+                                    </div>
                                 </div>
                             </div>
                         </form>
