--- a/templates/index.html
+++ b/templates/index.html
@@ -2,22 +2,21 @@
 {% load static %}
 {% block head %}
 <style>
-    /* 添加自定义样式 */
     .card-title {
-        font-size: 1.5rem; /* 调整标题字体大小 */
-        font-weight: bold; /* 加粗标题文字 */
-        margin-bottom: 0.5rem; /* 调整标题底部间距 */
+        font-size: 1.5rem; /* 調整標題字體大小 */
+        font-weight: bold; /* 加粗標題文字 */
+        margin-bottom: 0.5rem; /* 調整標題底部間距 */
     }
 
     .card-text {
-        font-size: 1rem; /* 调整正文字体大小 */
-        color: #555; /* 设置正文文字颜色 */
-        margin-bottom: 1rem; /* 调整正文底部间距 */
+        font-size: 1rem; /* 調整正文字體大小 */
+        color: #555; /* 設定正文文字顏色 */
+        margin-bottom: 1rem; /* 調整正文底部間距 */
     }
 
     .btn {
         width: 100%;
-        margin-top: auto; /* 使按钮距离卡片底部间距为 auto */
+        margin-top: auto; /*使按鈕與卡片底部的間距為 auto  */
     }
 </style>
 {% endblock head %}
