--- a/templates/base.html
+++ b/templates/base.html
@@ -14,12 +14,12 @@
         {% endblock  %}
     </head>
     <body>
-        <!-- 定义导航栏 -->
+        <!-- 定義導航欄 -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
-                <!-- 导航栏商标 -->
+                <!--  導航欄標 -->
                 <a class="navbar-brand" href="">點名系統</a>
-                <!-- 导航入口 -->
+                <!-- 導航入口 -->
                 <div>
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -34,12 +34,6 @@
                         <li class="nav-item ">
                             <a class="nav-link" href="/index/">{{ username2 }}</a>   
                         </li>
-                        <!-- 如果用戶未登入，顯示"登入" -->
-                        {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="/login/">登入</a>
-                        </li>
-                        <!-- if 语句在这里结束 -->
                         {% endif %}
                         <li class="nav-item">
                             <a class="nav-link" href="/logout">登出</a>
